--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -50,9 +50,8 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
-
 
 .content {
   display: grid;
@@ -61,8 +60,6 @@ ol {
   gap: 30px;
   align-items: end;
 }
-
-.result {}
 
 .result__video-container {
   position: relative;
@@ -112,8 +109,6 @@ ol {
   text-decoration: underline;
 }
 
-.search-form__label-text {}
-
 .visually-hidden {
   position: absolute;
   inline-size: 1px;
@@ -127,7 +122,7 @@ ol {
 .search-form__textfield {
   min-width: 225px;
   min-height: 27px;
-  font-family: 'Fira Sans Condensed';
+  font-family: "Fira Sans Condensed";
   color: #fff;
   opacity: 7;
   font-size: 18px;
@@ -152,8 +147,6 @@ ol {
   align-items: center;
 }
 
-.search-form__checkbox {}
-
 .search-form__pseudo-checkbox {
   display: flex;
   justify-content: center;
@@ -165,13 +158,11 @@ ol {
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
-  content: '';
+  content: "";
   min-inline-size: 13px;
   min-block-size: 13px;
   background-color: #fff;
 }
-
-
 
 .content__details {
   display: flex;
@@ -266,8 +257,11 @@ ol {
   line-height: 16.2px;
   font-weight: 400;
   letter-spacing: 0;
-  white-space: nowrap;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
   overflow: hidden;
 }
 
@@ -278,13 +272,10 @@ ol {
   object-position: center;
 }
 
-
-
-
 .button {
   background-color: transparent;
   border: 1px solid #fff;
-  font-family: 'Fira Sans Condensed';
+  font-family: "Fira Sans Condensed";
   color: #fff;
   font-size: 18px;
   line-height: 100%;
